postcompile/src/snapshots/postcompile__tests__compile_failure.snap
---
source: postcompile/src/lib.rs
expression: out
---
exit status: 101
--- expand_stderr
error: expected one of `!` or `::`, found `<eof>`
 --> [POST_COMPILE]:1:1
  |
1 | invalid_rust_code
  | ^^^^^^^^^^^^^^^^^ expected one of `!` or `::`

error: could not compile `postcompile__tests__compile_failure` (bin "postcompile__tests__compile_failure") due to 1 previous error
